# minesweeper_ng

./: .gitignore  Cargo.toml  README.md  output.txt
.github/workflows/: cargo_test.yml  docs.yml  release.yml  rust.yml
benches/: solver.rs
src/: cli_utils.rs  lib.rs  main.rs  minesweeper_field.rs  minesweeper_game.rs  minesweeper_solver.rs  solver.rs
src/field_generator/: mine_field.rs  minesweeper_cell.rs  minesweeper_field.rs  minesweeper_field_creation.rs  minesweeper_field_iterator.rs  mod.rs  random_field.rs  random_generation_field.rs  surrounding_fields_iterator.rs
src/generator/: batch.rs  command.rs  mod.rs  single.rs
src/minesweeper_field/: defined_field.rs  display.rs  error.rs  file_io.rs  iterators.rs  json_io.rs  mod.rs  random_field.rs  svg.rs  trait.rs
src/minesweeper_solver/: islands.rs  mod.rs  simple_solver.rs  solver.rs  solver_steps.rs
src/minesweeper_solver/box_logic/: basic.rs  basic_logic.rs  boxes.rs  extended.rs  extended_logic.rs  mod.rs
src/minesweeper_solver/permutation_checker/: bit_mask.rs  islands.rs  mod.rs  permutations.rs  sort.rs
src/ng_generator/: boxes.rs  minesweeper_ng_field.rs  mod.rs  no_guess_field.rs  solver.rs  surrounding_fields_iterator.rs  test_fields.rs  test_ng_field.rs
src/noguess_field/: candidate.rs  failed_moves.rs  field.rs  frontier.rs  generator.rs  mod.rs  no_guess_field.rs
src/normal_field/: cell.rs  defined_field.rs  error.rs  iterators.rs  mines.rs  mod.rs  random_field.rs  svg.rs  trait.rs
src/solver/: cell_state.rs  field_solver.rs  findings.rs  islands.rs  mod.rs  solver_framework.rs  solving_api.rs  solving_helpers.rs  solving_utils.rs
src/solver/_old_references/: boxes-(extended_logic_rewrite).rs  extended_logic.rs
src/solver/_old_references/permutation_checker/: bit_mask.rs
src/solver/box_logic/: basic_logic.rs  boxes.rs  extended_logic.rs
src/solver/old/: mod.rs  solver_framework.rs
src/solver/permutation_checker/: mod.rs  permutations.rs
src/solver/strategy/: boxes.rs  macro.rs  mine_count.rs  mod.rs  permutations.rs  reduction.rs  simple.rs
src/solver/strategy/permutations/: components.rs  constraint_builder.rs  mod.rs  permutation_checker.rs  tests.rs
src/solver/strategy/sat_solver/: mod.rs  sat_solving.rs  solve.rs  tests.rs
