[package]
name = "minesweeper_ng_gen"
version = "0.8.9"
edition = "2024"

[dependencies]
rand = "0.9.2"
colored = "3.0.0"
num_cpus = "1.17.0"
serde_json = { version = "1.0.145", features = [] }
clap = { version = "4.5.51", features = ["derive"] }
indicatif = "0.18.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
