[package]
name = "minesweeper_ng_gen"
version = "0.9.0"
edition = "2024"

[dependencies]
rand = "0.10.1"
colored = "3.1.1"
num_cpus = "1.17.0"
serde_json = { version = "1.0.149", features = [] }
clap = { version = "4.6.0", features = ["derive"] }
indicatif = "0.18.4"
crossterm = "0.29.0"
svg = "0.18.0"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
incremental = false
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
