[package]
name = "minesweeper_ng_gen"
version = "1.0.1"
edition = "2024"

[features]
default = ["cli", "svg", "json"]
tui = ["dep:ratatui", "dep:crossterm", "dep:simple_logger"]
cli = ["dep:clap", "dep:indicatif", "tui"]
svg = ["dep:svg"]
json = ["dep:serde_json"]

[dependencies]
# Core
log = { version = "0.4", features = ["release_max_level_info"] }
rand = "0.10.1"
rayon = "1.10"
colored = "3.1.1"

# Optional
clap = { version = "4.6.1", features = ["derive"], optional = true }
crossterm = { version = "0.29.0", optional = true }
indicatif = { version = "0.18.4", optional = true }
ratatui = { version = "0.30", optional = true }
serde_json = { version = "1.0.149", optional = true }
simple_logger = { version = "5.2", default-features = false, optional = true }
svg = { version = "0.18.0", optional = true }

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

# --- Binaries ---

[[bin]]
name = "field_generator"
path = "src/bin/field_generator/main.rs"
required-features = ["cli"]

[[bin]]
name = "interactive"
path = "src/bin/interactive/main.rs"
required-features = ["tui"]

[[bin]]
name = "testing"
path = "src/bin/testing.rs"
required-features = ["cli", "tui", "svg", "json"]

[[bench]]
name = "solver"
harness = false

# --- Profiles ---

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
incremental = false
debug = false

[profile.release.package."*"]
opt-level = 3
codegen-units = 1
